# outperformer

./: IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.py
config/: .env.example  config.yaml
docs/: ARCHITECTURE.md  GETTING_STARTED.md
examples/: fetch_data_example.py  quickstart.py
src/: __init__.py  bot.py
src/backtesting/: __init__.py  backtester.py
src/data/: __init__.py  data_fetcher.py
src/execution/: __init__.py  trade_executor.py
src/features/: __init__.py  feature_engineer.py
src/models/: __init__.py  lstm_model.py  rl_agent.py
src/monitoring/: __init__.py  tasks.py
src/utils/: __init__.py  sentiment.py
tests/: conftest.py  test_backtester.py  test_data_fetcher.py  test_feature_engineer.py  test_integration.py  test_lstm_model.py  test_rl_agent.py
